--- a/index.css
+++ b/index.css
@@ -10,4 +10,7 @@ section {
 
 .visitors-container {
   background-color: #7000ff;
+  padding: 2.5rem 0;
+  padding-left: 2rem;
+  border-radius: 0.7rem;
 }
