--- a/index.css
+++ b/index.css
@@ -12,5 +12,5 @@ section {
   background-color: #7000ff;
   padding: 2.5rem 0;
   padding-left: 2rem;
-  border-radius: 0.7rem;
+  /* border-radius: 0.7rem; */
 }
