--- a/index.css
+++ b/index.css
@@ -17,8 +17,9 @@ p {
 
 .visitors-container {
   background-color: #7000ff;
-  padding: 2.5rem 0;
   padding-left: 2rem;
+  padding-top: 2rem;
+  padding-bottom: 3rem;
   border-radius: 0.7rem;
 }
 
