--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-color: black;
+  background-color: #181818;
   color: white;
 }
 
@@ -34,4 +34,5 @@ h1 {
 }
 
 .page-unique-container {
+  border: 3px solid #2e2e2e;
 }
