--- a/index.css
+++ b/index.css
@@ -45,9 +45,9 @@ h1 {
   padding-left: 3.8rem;
   padding-bottom: 4.5rem;
   display: flex;
-  /* gap: 2.2rem; */
+  gap: 2.2rem;
   /* flex-direction: column; */
-  /* border-radius: 0.6rem ; */
+  border-radius: 0.6rem;
 }
 
 .page,
