--- a/index.css
+++ b/index.css
@@ -67,7 +67,7 @@ h2 {
 button {
   text-decoration: none;
   color: white;
-  /* background-color: #7000ff; */
+  background-color: #7000ff;
   /* padding: 0.9rem 2.1rem; */
   /* margin-top: 1.8rem; */
 }
