--- a/index.css
+++ b/index.css
@@ -68,6 +68,6 @@ button {
   text-decoration: none;
   color: white;
   background-color: #7000ff;
-  /* padding: 0.9rem 2.1rem; */
+  padding: 0.9rem 2.1rem;
   /* margin-top: 1.8rem; */
 }
