--- a/index.css
+++ b/index.css
@@ -69,5 +69,5 @@ button {
   color: white;
   background-color: #7000ff;
   padding: 0.9rem 2.1rem;
-  /* margin-top: 1.8rem; */
+  margin-top: 1.8rem;
 }
