--- a/index.css
+++ b/index.css
@@ -71,4 +71,7 @@ button {
   background-color: #7000ff;
   padding: 0.9rem 2.1rem;
   margin-top: 1.8rem;
+  border-radius: 0.7rem;
+  /* font-size: 1.3rem; */
+  /* font-weight: 700; */
 }
