adding font-size

--- a/index.css
+++ b/index.css
@@ -72,6 +72,6 @@ button {
   padding: 0.9rem 2.1rem;
   margin-top: 1.8rem;
   border-radius: 0.7rem;
-  /* font-size: 1.3rem; */
+  font-size: 1.3rem;
   /* font-weight: 700; */
 }
