--- a/index.css
+++ b/index.css
@@ -79,7 +79,10 @@ button {
 
 .Launch-liveView-container p {
   color: #878787;
-  margin-top: 1.3rem;
   text-align: center;
   width: 268px;
+  margin: 0 auto;
+  margin-top: 1.3rem;
+  padding: 0.5rem;
+  /* box-sizing: border-box; */
 }
