--- a/index.css
+++ b/index.css
@@ -88,4 +88,8 @@ button {
 }
 
 @media only screen and (min-width: 900px) {
+  .visitors-page-container {
+    display: flex;
+    /* flex-direction: row; */
+  }
 }
