--- a/index.css
+++ b/index.css
@@ -90,6 +90,13 @@ button {
 @media only screen and (min-width: 900px) {
   .visitors-page-container {
     display: flex;
+    flex-direction: row;
+  }
+  .visitors-container {
+    width: 30%;
+  }
+  .page-unique-container {
+    /* width: 70%; */
     /* flex-direction: row; */
   }
 }
