--- a/index.css
+++ b/index.css
@@ -96,7 +96,7 @@ button {
     width: 30%;
   }
   .page-unique-container {
-    /* width: 70%; */
+    width: 70%;
     /* flex-direction: row; */
   }
 }
