--- a/index.css
+++ b/index.css
@@ -98,5 +98,7 @@ button {
   .page-unique-container {
     width: 70%;
     flex-direction: row;
+    padding: 56px 0;
+    padding-left: 44px;
   }
 }
