--- a/index.css
+++ b/index.css
@@ -104,4 +104,28 @@ button {
 }
 
 @media only screen and (min-width: 1200px) {
+  section {
+    /* display: flex; */
+    /* flex-direction: row; */
+    /* margin: 0 auto; */
+    /* max-width: 1100px; */
+    /* margin-top: 8.5rem; */
+    /* gap: 1.5rem; */
+    /* align-items: start; */
+  }
+  /* button {
+    /* margin-top: 0; */
+  } */
+
+  /* .Launch-liveView-container p {
+    /* margin-top: 0; */
+    /* text-align: start; */
+  } */
+
+  /* img {
+    /* width: 50px; */
+  } */
+  /* .visitors-page-container {
+    /* width: 100%; */
+  } */
 }
