--- a/index.css
+++ b/index.css
@@ -105,7 +105,7 @@ button {
 
 @media only screen and (min-width: 1200px) {
   section {
-    /* display: flex; */
+    display: flex;
     /* flex-direction: row; */
     /* margin: 0 auto; */
     /* max-width: 1100px; */
