--- a/index.css
+++ b/index.css
@@ -106,7 +106,7 @@ button {
 @media only screen and (min-width: 1200px) {
   section {
     display: flex;
-    /* flex-direction: row; */
+    flex-direction: row;
     /* margin: 0 auto; */
     /* max-width: 1100px; */
     /* margin-top: 8.5rem; */
