--- a/index.css
+++ b/index.css
@@ -107,7 +107,7 @@ button {
   section {
     display: flex;
     flex-direction: row;
-    /* margin: 0 auto; */
+    margin: 0 auto;
     /* max-width: 1100px; */
     /* margin-top: 8.5rem; */
     /* gap: 1.5rem; */
