--- a/index.css
+++ b/index.css
@@ -108,7 +108,7 @@ button {
     display: flex;
     flex-direction: row;
     margin: 0 auto;
-    /* max-width: 1100px; */
+    max-width: 1100px;
     /* margin-top: 8.5rem; */
     /* gap: 1.5rem; */
     /* align-items: start; */
