--- a/index.css
+++ b/index.css
@@ -109,7 +109,7 @@ button {
     flex-direction: row;
     margin: 0 auto;
     max-width: 1100px;
-    /* margin-top: 8.5rem; */
+    margin-top: 8.5rem;
     /* gap: 1.5rem; */
     /* align-items: start; */
   }
