--- a/index.css
+++ b/index.css
@@ -111,7 +111,7 @@ button {
     max-width: 1100px;
     margin-top: 8.5rem;
     gap: 1.5rem;
-    /* align-items: start; */
+    align-items: start;
   }
   /* button {
     /* margin-top: 0; */
