--- a/index.css
+++ b/index.css
@@ -113,9 +113,9 @@ button {
     gap: 1.5rem;
     align-items: start;
   }
-  /* button {
+  button {
     /* margin-top: 0; */
-  } */
+  }
 
   /* .Launch-liveView-container p {
     /* margin-top: 0; */
