--- a/index.css
+++ b/index.css
@@ -114,7 +114,7 @@ button {
     align-items: start;
   }
   button {
-    /* margin-top: 0; */
+    margin-top: 0;
   }
 
   /* .Launch-liveView-container p {
