--- a/index.css
+++ b/index.css
@@ -117,10 +117,10 @@ button {
     margin-top: 0;
   }
 
-  /* .Launch-liveView-container p {
+  .Launch-liveView-container p {
     /* margin-top: 0; */
     /* text-align: start; */
-  } */
+  }
 
   /* img {
     /* width: 50px; */
