--- a/index.css
+++ b/index.css
@@ -119,7 +119,7 @@ button {
 
   .Launch-liveView-container p {
     /* margin-top: 0; */
-    /* text-align: start; */
+    text-align: start;
   }
 
   /* img {
