--- a/index.css
+++ b/index.css
@@ -122,9 +122,9 @@ button {
     text-align: start;
   }
 
-  /* img {
+  img {
     /* width: 50px; */
-  } */
+  }
   /* .visitors-page-container {
     /* width: 100%; */
   } */
