--- a/index.css
+++ b/index.css
@@ -125,7 +125,7 @@ button {
   img {
     width: 50px;
   }
-  /* .visitors-page-container {
+  .visitors-page-container {
     /* width: 100%; */
-  } */
+  }
 }
